Added support for stream ID validation